# hackwrench

./: CMakeLists.txt  README.md
dataflow_api/: CMakeLists.txt  plot.sh
dataflow_api/src/: main.cpp
dataflow_api/src/api/: schema.hpp  txn.hpp
dataflow_api/src/benchmark/tpcc/: tpcc.cc  tpcc.hpp  tpcc_schema.cc  txn_delivery.cc  txn_new_order.cc  txn_order_status.cc  txn_payment.cc  txn_stock_level.cc
dataflow_api/src/graph/: node.cc  node.hpp
dataflow_api/src/type/: input.hpp  row.hpp  value.hpp
dataflow_api/src/util/: logging.h
doc/dataflow_api/: api.md  tpcc.md
doc/hackwrench/: build.md  run.md
plot/: .gitignore  color.pal  plot.sh
plot/v1/: fdb-tpcc-tput-lat.plt  hw-batch-tpcc-tput-lat.plt  hw-vs-occ-tpcc-tput-lat.plt  hw-vs-tpcc-drop.plt  hw-vs-tpcc-tput-hist-normalized.plt  hw-vs-tpcc-tput-hist.plt  tpcc-abort-vs-repair.plt  tpcc-batch-effect-0.plt  tpcc-batch-effect-1.plt  tpcc-batch-effect-5.plt  tpcc-ratio.plt  tpcc-replication-effect.plt  tpcc-scalability.plt  ycsb10-batch-effect-1+6.plt  ycsb10-batch-effect-1.plt  ycsb10-batch-effect-6.plt  ycsb10-cache-effect-repair.plt  ycsb10-cache-effect.plt
plot/v1/data/: hw-vs-tpcc-tput-hist.data  tpcc-abort-vs-repair.data  tpcc-batch-effect-0.data  tpcc-batch-effect-1.data  tpcc-batch-effect-5.data  tpcc-ratio.data  tpcc-replication-effect.data  tpcc-scalability.data  tpcc-tput-lat.data  ycsb10-batch-effect-1.data  ycsb10-batch-effect-6.data  ycsb10-cache-effect.data
plot/v2/: hw-vs-coco&calvin.plt  hw-vs-coco-tput-hist.plt  hw-vs-tpcc-tput-hist.plt  tpcc-abort-vs-repair.plt  ycsb10-contention.plt
plot/v2/data/: hw-vs-coco&calvin.data  hw-vs-coco-tput-hist.data  hw-vs-tpcc-tput-hist.data  tpcc-abort-vs-repair.data  tpcc-scalability.data  ycsb10-cache-effect.data  ycsb10-contention.data
plot/v3/: breakdown-calvin.plt  breakdown-coco&calvin&hw.plt  breakdown-coco.plt  breakdown-hw-noreplica.plt  breakdown-hw.plt  breakdown-sundial&hw-noreplica.plt  breakdown-sundial.plt  hw-vs-coco&calvin.plt  hw-vs-sundial-tpcc.plt  hw-vs-tpcc-tput-hist-fdb.plt  hw-vs-tpcc-tput-hist-half.plt  hw-vs-tpcc-tput-hist.plt  micro-batch-effect-half.plt  micro-batch-effect.plt  micro-cache-effect.plt  micro-contention-coco-0.1.plt  micro-contention-coco-0.99.plt  micro-contention-coco.plt  micro-contention-sundial-0.1.plt  micro-contention-sundial-0.99.plt  micro-contention-sundial.plt  network-message.plt  total-vs-partial.plt  tpcc-abort-vs-repair.plt  tpcc-scalability-noinvertkey.plt  tpcc-scalability.plt  ts-bottleneck.plt
plot/v3/data/: breakdown-calvin.data  breakdown-coco.data  breakdown-hw-noreplica.data  breakdown-hw.data  breakdown-sundial.data  hw-vs-coco&calvin.data  hw-vs-sundial-tpcc.data  hw-vs-tpcc-tput-hist-fdb.data  hw-vs-tpcc-tput-hist-half.data  hw-vs-tpcc-tput-hist.data  micro-batch-effect-0.1.data  micro-batch-effect-0.99.data  micro-cache-effect.data  micro-contention-coco-0.1.data  micro-contention-coco-0.99.data  micro-contention-sundial-0.1.data  micro-contention-sundial-0.99.data  network-message.data  total-vs-partial.data  tpcc-abort-vs-repair.data  tpcc-scalability.data  ts-bottleneck.data
scripts/: .gitignore  code_count.sh  exclude.txt  fine_coarse_occ_cmp.sh  gen_capnp_files.sh  gen_ssh_config.py  get_result_sn.py  parse_log.py  requirements.txt  run_all.sh  send_code.sh
scripts/aws/: .gitignore  servers-colocated.yaml  servers.yaml
scripts/eval/: 0_motivation_ycsb.py  0_tput_lat.py  10_micro_cache_effect.py  1_tpcc_tput_lat.py  2_tpcc_lat.py  3_factor_analysis.py  4_tpcc_coco.py  5_tpcc_sundial.py  6_tpcc_scalability.py  7_micro_contention.py  7_micro_contention_sundial.py  8_micro_ts.py  9_micro_batch_effect.py  basic_run.py  get_result.py
scripts/figure/: 0_motivation.sh  10_micro_cache_effect.sh  1_tpcc_tput.sh  2_tpcc_lat.sh  3_factor_analysis.sh  4_tpcc_coco.sh  5_tpcc_sundial.sh  6_tpcc_scalability.sh  7_micro_contention.sh  8_micro_ts.sh  9_micro_batch_effect.sh
src/: CMakeLists.txt  main.cpp
src/benchmarks/: interface.h  workload_ycsbt10.h
src/benchmarks/tpcc/: schema.h  workload_tpcc.h
src/index/: interface.h  pbtree.h  pbtree_node.h  record_lock.h
src/rpc/: .gitignore  CMakeLists.txt  SNinterface.capnp  message_buffer.h  rpc.h
src/servers/: CONFIG_OPTIONS.md  clients.h  config.h  db_node.h  storage_node.h  time_server.h
src/storage/: lock_manager.h  multi_ver_record.h  occ_lock_manager.h  page.h  page_manager.h  segment.h  sequence_manager.h  storage.h  txn_info.h
src/txn/: batch_manager.h  batch_txn.h  db_txn.h  log_sequence.h  page_snapshot.h  pipeline_scheduler.h  redo_log.h  temp_log.h
src/util/: barrier.h  core_binding.h  dbug_logging.h  event_channel.h  exceptions.h  fast_random.h  lock_free_queue.h  macros.h  memory_arena.h  static_hash_map.h  statistic.h  str.h  thread_safe_structures.h  timer.h  txn_lat.h  types.h  utils.h  zipf.h
